--- a/src/components/main_layout/main_layout.module.css
+++ b/src/components/main_layout/main_layout.module.css
@@ -1,6 +1,7 @@
 .post_body{
     margin: 0 auto;
     max-width: 1200px;
+    /*min-width: auto; */
     padding-left: 32px;
 }
 
@@ -8,6 +9,5 @@
     padding-left: 32px;
     margin: 0 auto;
     max-width: 5000px;
-    width: 650px;
-    padding-left: 32px;
+    /* width: 300px; */
 }
