--- a/src/components/taglist/taglist.module.css
+++ b/src/components/taglist/taglist.module.css
@@ -1,3 +1,11 @@
-.ant-tag{
-    margin-bottom: 12px;
+.mytags{
+    margin-bottom: 5px;
+    height: 30px;
+    font-size: 20px;
+    line-height: 30px;
+    display: inline-block;
+}
+
+.block{
+    background-color: whitesmoke;
 }
