Modify the align of navbar contents to centerd

--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,6 +1,12 @@
-.head_bar{
-    height: 128px;
+.header_overall{
     max-width: auto;
+    height: 128px;
+    margin: auto;
+}
+
+.header_content{
+    max-width: 800px;
+    margin: auto;
 }
 
 .title{
