--- a/src/components/blog_right_sidebar/blog_right_sidebar.module.css
+++ b/src/components/blog_right_sidebar/blog_right_sidebar.module.css
@@ -1,10 +1,4 @@
-.sidebar{
-    /* margin: 0 auto; */
-    /* max-width: 250px; */
-    /* padding-left: 0px; */
-}
-
-.layout{
-    width: 150px;
+.sidebar_overall{
+    /* width: 150px; */
     /*margin: auto auto auto 10px; */
 }
